@@ -1,3 +1,4 @@
+ - Fix subdomain assemble for SystemAssembler
  - Fix OpenMp assemble of scalars
  - Make OpenMP assemble over sub domains work
  - DirichletBC.get_boundary_values, FunctionSpace.collapse now return a dict in Python
